Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29032

CMake/ninja: Qt SDKs Ninja is not in Path. Configuration fails (Msvc)

XMLWordPrintable

    • Windows
    • 64cd1df74 (11.0)

      I do not have ninja in the system, and use instead that ninja which is shipped with the Qt installer.

      With Qt Creator master and an msvc kit, this does not work, anymore. I get this error message when trying to configure a project:

      CMake Error: CMake was unable to find a build program corresponding to "Ninja".  CMAKE_MAKE_PROGRAM is not set.  You probably need to select a different build tool.
      

      CMakeBuildConfiguration::addToEnvironment() is called multiple times and it does add ninja to "Path". However, when CMakeProcess::run() is called, the passed-in Utils::Environment does indeed not have ninja in "Path".

      If I use a MinGW kit, the path does contain ninja and configuration succeeds. So, this seems to be specific to the Msvc toolchain.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes