CMakePM: Add Qt SDK ninja to configure environment

Fixes: QTCREATORBUG-29032
Change-Id: I1aebd11ba85ad6a363ecf1ab6406cdec20753e9d
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>