src/plugins/cmakeprojectmanager/cmakebuildconfiguration.cpp
@@ -2087,7 +2087,10 @@ void CMakeBuildConfiguration::addToEnvironment(Utils::Environment &env) const
 
 Environment CMakeBuildConfiguration::configureEnvironment() const
 {
-    return aspect<ConfigureEnvironmentAspect>()->environment();
+    Environment env = aspect<ConfigureEnvironmentAspect>()->environment();
+    addToEnvironment(env);
+
+    return env;
 }
 
 QString CMakeBuildSystem::cmakeBuildType() const
